<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/header_rl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_bacK_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/app_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/iv_bacK_icon"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:text="@string/scraprushdark"
            android:textSize="@dimen/login_caption"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_login_bg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/header_rl"
        android:src="@drawable/app_illustration" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_login_bg"
        android:layout_marginTop="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/scraprushwelcome"
            android:textSize="@dimen/login_caption"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mobile"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@id/tv_welcome"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/primary"
            android:text="Continue with Mobile Number"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text"
            app:cornerRadius="7dp"
            app:icon="@drawable/phone_circle"
            app:iconGravity="textStart"
            app:iconSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="By Continue you agree that you have read and accept our "
            android:textAlignment="center"
            android:textColor="@color/divider"
            android:textSize="@dimen/login_body"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_terms"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/terms_amp_conditions"
                android:textColor="@color/green_font"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="and"
                android:textColor="@color/divider"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/green_font"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>