<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.numberverification.NumberVerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@drawable/arch_shape"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_icon"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/scraprush"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:visibility="gone" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_mobile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="OTP Verification  "
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/white"
            android:textSize="@dimen/login_caption" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mobile_title"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="We have sent OTP to your mobile number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_body"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_subtitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="+91 8148979742"
            android:textAlignment="center"
            android:textColor="@color/green_font"
            android:textSize="@dimen/login_body"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1">

        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/otp_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:inputType="number"
            android:textSelectHandle="@drawable/text_handle"
            android:textSize="16sp"
            app:backgroundTint="@color/black"
            app:bottomTextPaddingDp="15dp"
            app:cornerRadius="10dp"
            app:distanceInBetween="10dp"
            app:fieldColor="@color/black"
            app:highlightColor="@color/black"
            app:highlightType="allFields"
            app:isCursorEnabled="true"
            app:noOfFields="6" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp_et"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="00:00"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/caption"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_timer"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Didn't receive the code?"
                android:textAlignment="center"
                android:textColor="@color/divider"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/tv_otp_desc"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/resend_otp"
                android:textAlignment="center"
                android:textColor="@color/green_font"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_otp"
            android:layout_width="150dp"
            android:layout_height="?actionBarSize"
            android:layout_below="@id/rl_resend_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:text="Verify OTP"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text"
            app:cornerRadius="7dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="By Continue you agree that you have read and accept our "
                android:textAlignment="center"
                android:textColor="@color/divider"
                android:textSize="@dimen/login_body"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_terms"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/green_font"
                    android:textSize="@dimen/login_body"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="and"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/login_body"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/green_font"
                    android:textSize="@dimen/login_body"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>